--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -1,37 +1,12 @@
 /* menu */
-.hover:hover {
-    cursor: pointer;
-    opacity: 0.7;
-    transition: 0.2s;
-}
 
-
-
-.nav{
-    text-decoration: none;
-    color: black;
-    width: fit-content;
-    text-align: center;
-    padding: 0.3rem;
-    
-    
-}
 
 .logo{
     width: 70px;
     transition: all 0.4s ease;
-    
-}
-
-.logo:hover{
-    transform: scale(1.1);
-    
-}
-
-.boton__nav{
-    background-color: black;
-    border-radius: 5px;
-    color: white;
+    &:hover {
+        transform: scale(1.1);
+    }
 }
 
 .menu{
@@ -40,17 +15,28 @@
     align-items: center;
     background-image: linear-gradient(#ff8cee, #8f5cf7);
     width: 100%;
-    
-    
+    .nav {
+        text-decoration: none;
+        color: black;
+        width: fit-content;
+        text-align: center;
+        padding: 0.3rem;                           
+    }
+    &__div2 {
+        margin-right: 25%;
+        width: 50%;
+        display: flex;
+        justify-content: space-around;
+        .boton__nav {
+            background-color: black;
+            border-radius: 5px;
+            color: white;
+        }
+        
+    }
 }
 
-.div2{
-    margin-right: 25%;
-    width: 50%;
-    display: flex;
-    justify-content: space-around;
-    
-}
+
 .nav__mobile{
     background-image: linear-gradient(#ff8cee, #8f5cf7);
     display: none;
@@ -59,19 +45,14 @@
     position: fixed;
     width: 100%;
     padding: 5px;
-}
-
-.nav__mobile__icons{
-    display: flex;
-    flex-direction: column;
-    text-decoration: none;
-    justify-content: center;
-    text-align: center;
-    color: black;
-}
-
-.icon{
-    font-size: 2.2rem;
+    &__icons {
+        display: flex;
+        flex-direction: column;
+        text-decoration: none;
+        justify-content: center;
+        text-align: center;
+        color: black;
+    }
 }
 
 
@@ -80,16 +61,9 @@
         display: flex;
         
     }
-    .div2{
+    .menu__div2{
         display: none;
     }
-    footer{
-        display: none;
-    }
-    article img {
-        display: none;
-    }
-    
     /* contacto */
     
     .cuadro__form{
@@ -105,3 +79,10 @@
 }
 
 /* fin de nav */
+
+article img{
+    width: 5cm;
+    margin-bottom: 100px;
+    
+    
+}
