--- a/scss/views/_contacto.scss
+++ b/scss/views/_contacto.scss
@@ -56,6 +56,14 @@
         .titulo__contact{
             width: 300px;
             font-size: 2rem;
+        }    
+        .cuadro__form{
+            margin-bottom: 100px;
         }
-    }
+
+        
+
+        
+            
+        }
 }
