--- a/scss/views/_modosdejuego.scss
+++ b/scss/views/_modosdejuego.scss
@@ -67,5 +67,8 @@
         .subtitulo__not{
             width: 350px;
         }
+        .yout__vid{
+            margin-bottom: 100px;
+        }
     }
 }
