--- a/css/main.css
+++ b/css/main.css
@@ -107,7 +107,12 @@
     width: 500px;
     margin-left: auto;
     margin-right: auto;
-    font-size: 1.2rem; } }
+    font-size: 1.2rem; }
+  .subtitulo__not {
+    margin-left: auto;
+    margin-right: auto;
+    width: 400px;
+    text-align: center; } }
 
 @media only screen and (max-width: 767px) {
   .subtitulo__not {
@@ -236,7 +241,7 @@
     width: 400px; } }
 
 /* modos de juego */
-.titulo__juego {
+.titulo__juego, .titulo__juego__nuevo {
   background-color: #a163f8;
   border-radius: 60px;
   width: 90px;
@@ -247,6 +252,10 @@
   margin-bottom: 10px;
   animation-duration: 2s;
   animation-name: titulojuego; }
+
+.titulo__juego__nuevo {
+  width: 400px;
+  text-decoration: underline; }
 
 .p__mjuego {
   font-size: 1.5rem;
@@ -262,32 +271,30 @@
   margin-top: 10px; }
 
 @media only screen and (max-width: 1024px) {
-  .titulo__juego {
+  .titulo__juego, .titulo__juego__nuevo {
     width: 150px;
     margin-left: auto;
     margin-right: auto; }
+  .titulo__juego__nuevo {
+    font-size: 2.0rem;
+    width: 330px; }
   .p__mjuego {
     width: 500px;
     margin-left: auto;
     margin-right: auto; }
-  .subtitulo__not {
-    margin-left: auto;
-    margin-right: auto;
-    width: 400px;
-    text-align: center; }
   .yout__vid {
     width: 80%;
     margin-left: 10%;
     margin-right: 10%; } }
 
 @media only screen and (max-width: 1024px) and (max-width: 766px) {
-  .titulo__juego {
+  .titulo__juego, .titulo__juego__nuevo {
     width: 100px; }
+  .titulo__juego__nuevo {
+    width: 250px; }
   .p__mjuego {
     width: 400px;
     text-align: center; }
-  .subtitulo__not {
-    width: 350px; }
   .yout__vid {
     margin-bottom: 100px; } }
 
@@ -347,11 +354,6 @@ article img {
   width: 5cm;
   margin-bottom: 100px; }
 
-.hover:hover {
-  cursor: pointer;
-  opacity: 0.7;
-  transition: 0.2s; }
-
 /* footer */
 .imgaxs {
   width: 5%; }
@@ -381,14 +383,28 @@ footer div a {
     display: none; } }
 
 /* fin del footer */
+* {
+  margin: 0;
+  font-family: 'Kanit', sans-serif; }
+
+/* maps */
+.bg-planta {
+  background-color: #a2ba1c; }
+
+.bg-pajaro {
+  background-color: #ff9ab8; }
+
+.bg-bestia {
+  background-color: #6f401e; }
+
+.bg-acuatico {
+  background-color: #3b91ca; }
+
+/* mixins */
 .hover:hover {
   cursor: pointer;
   opacity: 0.7;
   transition: 0.2s; }
-
-* {
-  margin: 0;
-  font-family: 'Kanit', sans-serif; }
 
 .imagen__fondo {
   background-image: url(../img/imagenfondo.jpg);
