--- a/scss/views/_noticias.scss
+++ b/scss/views/_noticias.scss
@@ -32,6 +32,12 @@
         margin-right: auto;
         font-size: 1.2rem;
     }
+    .subtitulo__not{
+        margin-left: auto;
+        margin-right: auto;
+        width: 400px;
+        text-align: center;
+    }
 }
 
 @media only screen and (max-width:767px){
