--- a/scss/index.scss
+++ b/scss/index.scss
@@ -4,6 +4,7 @@
 @import "./views/contacto";
 @import "./views/cartas";
 @import "./views/axies";
+@import "./views/acuatico";
 @import "./views/modosdejuego";
 
 // partials
