--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -1,44 +1,69 @@
 // import 
 @import "../misc/var";
 
-
-
-/* footer */ 
-.imgaxs{
-    width: 5%;
-    
-
-}
-.imgslp{
-    width: 5%;
+footer {
+    width: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
     
 }
 
-footer{
+.footer { 
     position: absolute;
     width: 100%;
-    bottom: 0;
-    background-color: $violet;
+    height: 90%;
+    
+    & div ul li {
+        list-style: none;
+        text-align: center;
+        & h4 {
+            font-size: 2rem;
+        }
+        & a {
+            text-decoration: none;
+            color: black;
+            font-size: 1.2rem;
+            
+        }
+        
+    }
+    &__column {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        width: 100%;
+        height: 100%;
+    }
+    &__container {
+        display: flex;
+        justify-content: space-around;
+        &__left {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            & div {
+                display: flex;
+                justify-content: space-around;
+                width: 100%;
+                & i {
+                    font-size: 2rem;
+                    padding-top: 8px;
+                    color: #005add;
+                }
+            }
+        }
+    }
+    &__img {
+        height: 64px;
+        border-radius: 1rem;
+    }
 }
 
-html {
-    min-height: 100%;
-    position: relative;
-  }
+// media 
 
-
-footer div a{
-    color: $black;
-    float: right;
-    text-decoration: none;
-}
-
-@media only screen and (max-width:767px) {
-    footer{
+@media only screen and (max-width:1024px){
+    footer {
         display: none;
     }
-    article img {
-        display: none;
-    }
 }
-/* fin del footer */
