--- a/scss/views/_noticias.scss
+++ b/scss/views/_noticias.scss
@@ -1,57 +1,88 @@
+@import "../misc/var";
+
 // noticias 
 
 /* noticias */
-.subtitulo__not{
-    font-size: 2.5rem;
-    background-color: rgb(161, 99, 248);
-    border-bottom: dashed 1px black;
-    width: 400px;
-    margin-top: 10px;
-    margin-left: 10px;
-    color: black;
-    text-decoration: underline;
-    animation-duration: 2s;
-    animation-name: titulonoticias;
-}
-.p__not{
-    font-size: 1.5rem;
-    background-color: rgb(161, 99, 248);
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    width: 1000px;
+.noticias__titulo {
     text-align: center;
-    border-style: solid;
+    padding: 8rem 0;
+    background-image: url("https://cdn.axieinfinity.com/landing-page/_next/static/images/banner-bbfbb8462c9156a1fc392a32b9448b62.jpg");
+    background-size: cover;
+    font-size: 3rem;
+    color: $gold;
+}
+.main__noticias {
+    background: url("https://cdn.axieinfinity.com/assets/images/e6c085be7f7d7671135ab09507bdd489.png") center 15px / 446px 35px repeat-x, url("https://cdn.axieinfinity.com/assets/images/e6c085be7f7d7671135ab09507bdd489.png") center calc(100% - 15px) / 446px 35px repeat-x, linear-gradient(to right top, rgb(97, 39, 31), rgb(104, 57, 21));
+    display: flex;
+    justify-content: center;
+}
+.noticias {
+    margin-bottom: 3rem;
+    display: grid;
+    grid-template-areas: 'auto auto auto';
+    gap: 2rem;
+    padding: 6rem 0;
+
+    &__container {
+        width: 380px;
+        border-radius: 1rem;
+        box-shadow: 0 0.2rem 0.5rem rgba(0,0,0,0.3);
+        background-image: url("https://cdn.axieinfinity.com/landing-page/_next/static/images/paper-76baf766d4b1a24001967d2b100fb4dd.jpg");
+        background-size: cover;
+        &__img {
+            height: 225px;
+            
+            background-position: center;
+            border-radius: 1rem 1rem 0rem 0rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            text-align: center;
+        }
+        &__info {
+            padding: 1rem 1rem 0rem 1rem;
+        }
+        &__button {
+            text-align: end;
+            padding: 0rem 1rem 1rem 1rem;
+            & button {
+                background-image: url(../img/fondomobile.jpg);
+                border: solid 0px;
+                padding: 0 1rem;
+                border-radius: 0.5rem;
+                color: $gold;
+            }
+        }
+    }
+}
+
+.nt {
+    &1 {background-image: url(../img/noticias.png);}
+    &2 {background-image: url("https://cdn.axieinfinity.com/assets/images/32711beacbe9b3ba232615dda0509167.png");}
+    &3 {background-image: url("https://cdn.axieinfinity.com/assets/images/fc9a4f66f62ddf2cc8d9c6bc112bd6c5.png");}
+    &4 {background-image: url("https://cdn.axieinfinity.com/assets/images/0eb07a6821f7b90c3e253bb9825dfb03.png");}
+    &5 {background-image: url("https://cdn.axieinfinity.com/assets/images/8d2943d50da2ec3cef22f7084aa88a86.png");}
 
 }
 
-@media only screen and (max-width:1024px){
-    .p__not{
-        width: 500px;
-        margin-left: auto;
-        margin-right: auto;
-        font-size: 1.2rem;
-    }
-    .subtitulo__not{
-        margin-left: auto;
-        margin-right: auto;
-        width: 400px;
-        text-align: center;
-    }
-}
+//media 
 
-@media only screen and (max-width:767px){
-    .subtitulo__not{
-        width: 330px;
-        font-size: 2rem;
-        margin-left: auto;
-        margin-right: auto;
-        text-align: center;
+@media only screen and (max-width:1250px){
+    .noticias {
+        grid-template-areas: 'auto auto';
     }
-    .p__not{
-        font-size: 1rem;
-        width: 360px;
-        margin-left: auto;
-        margin-right: auto;
+    @media only screen and (max-width:825px){
+        .noticias {
+            grid-template-areas: 'auto auto';
+            &__container {
+                width: 300px;
+            }
+        }
+        @media only screen and (max-width:670px){
+            .noticias {
+                grid-template-areas: 'auto';
+            }
+        }
+        
     }
 }
