--- a/css/main.css
+++ b/css/main.css
@@ -8,14 +8,13 @@
 
 .home__flag {
   text-align: center;
-  height: 47vh; }
+  height: 47vh;
+  display: flex;
+  justify-content: center; }
   .home__flag__container {
     background-image: url("https://cdn.axieinfinity.com/landing-page/_next/static/images/scroll-663a1f21776613e7cb0162d91ef76656@1x.webp");
     background-repeat: no-repeat;
     width: 1000px;
-    height: 47vh;
-    margin-left: auto;
-    margin-right: auto;
     background-size: cover; }
     .home__flag__container h1 {
       padding-top: 4rem;
@@ -128,8 +127,9 @@
   padding: 8rem 0;
   background-image: url("https://cdn.axieinfinity.com/landing-page/_next/static/images/banner-bbfbb8462c9156a1fc392a32b9448b62.jpg");
   background-size: cover;
-  font-size: 3rem;
-  color: #e08d2a; }
+  font-size: 5rem;
+  color: #e08d2a;
+  background-position: center; }
 
 .main__noticias {
   background: url("https://cdn.axieinfinity.com/assets/images/e6c085be7f7d7671135ab09507bdd489.png") center 15px/446px 35px repeat-x, url("https://cdn.axieinfinity.com/assets/images/e6c085be7f7d7671135ab09507bdd489.png") center calc(100% - 15px)/446px 35px repeat-x, linear-gradient(to right top, #61271f, #683915);
@@ -195,42 +195,45 @@
 
 @media only screen and (max-width: 1250px) and (max-width: 825px) and (max-width: 670px) {
   .noticias {
-    grid-template-areas: 'auto'; } }
+    grid-template-areas: 'auto'; }
+    .noticias__titulo {
+      font-size: 3rem; } }
 
 /* formulario */
-.form__contact {
-  border-radius: 60px;
-  text-align: center;
-  width: 200px;
-  margin-bottom: 10px; }
-
-.comentario__cont {
-  margin-bottom: 10px; }
-
-.titulo__contact {
-  background-color: #a163f8;
-  border-radius: 60px;
-  margin-bottom: 10px;
-  margin-top: 100px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 510px;
-  font-size: 3.5rem;
-  text-align: center;
-  text-decoration: underline;
-  animation-name: tituloanimation2;
-  animation-duration: 1.2s; }
-
-.cuadro__form {
-  background-color: #a163f8;
-  width: 300px;
-  border-style: solid;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center; }
-
-.container {
-  margin-top: 100px; }
+.contacto {
+  background-image: url("../img/fondocontacto.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100vh;
+  padding-top: 4.4rem;
+  display: flex;
+  justify-content: end;
+  padding-right: 6%; }
+  .contacto__container {
+    width: 430px;
+    height: 503px;
+    background-image: url("https://cdn.axieinfinity.com/landing-page/_next/static/images/p2e-paper-e5b15f2bb8e6c1e8d2d006e438af5351@1x.webp"); }
+    .contacto__container__form {
+      display: flex;
+      padding: 1rem 2rem;
+      flex-direction: column;
+      justify-content: space-around;
+      height: 475px; }
+      .contacto__container__form__boton {
+        background-color: #2061c9;
+        color: white;
+        border-radius: 0.5rem; }
+      .contacto__container__form h1 {
+        text-align: center;
+        color: #2061c9;
+        font-size: 2.5rem; }
+      .contacto__container__form input {
+        padding: 0.5rem;
+        cursor: pointer; }
+      .contacto__container__form__social {
+        display: flex;
+        justify-content: space-around; }
 
 @media only screen and (max-width: 1024px) {
   .titulo__contact {
@@ -321,7 +324,8 @@
     background-position: center;
     background-repeat: no-repeat;
     display: flex;
-    justify-content: center; }
+    justify-content: center;
+    padding-bottom: 2rem; }
     .acuatico__main__container {
       display: grid;
       grid-template-areas: 'auto auto auto';
@@ -556,7 +560,8 @@ footer {
   width: 100%;
   text-align: center;
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+  margin-top: 2.5rem; }
 
 .footer {
   position: absolute;
@@ -583,7 +588,7 @@ footer {
     .footer__container__left {
       display: flex;
       flex-direction: column;
-      align-items: center; }
+      justify-content: center; }
       .footer__container__left div {
         display: flex;
         justify-content: space-around;
