--- a/scss/views/_acuatico.scss
+++ b/scss/views/_acuatico.scss
@@ -15,6 +15,7 @@
         background-repeat: no-repeat;
         display: flex;
         justify-content: center;
+        padding-bottom: 2rem;
         &__container {
             display: grid;
             grid-template-areas: 'auto auto auto';
