--- a/scss/views/_home.scss
+++ b/scss/views/_home.scss
@@ -20,7 +20,7 @@
             background-image: url("https://cdn.axieinfinity.com/landing-page/_next/static/images/scroll-663a1f21776613e7cb0162d91ef76656@1x.webp");
             background-repeat: no-repeat;
             width: 1000px;
-            background-size: cover;
+            background-size: contain;
             & h1 {
                 padding-top: 4rem;
                 font-size: 3.5rem;
